k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kiii-deployment
  namespace: kiii-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movies-project
  template:
    metadata:
      labels:
        app: movies-project
    spec:
      containers:
        - name: movies-project
          image: bojanajancheska/kiii-project:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
