k8s/db-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: citus-coordinator
  namespace: kiii-namespace
spec:
  ports:
    - port: 5432
      name: postgres
  clusterIP: None
  selector:
    app: citus-coordinator
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: citus-coordinator
  namespace: kiii-namespace
spec:
  serviceName: "citus-coordinator"
  replicas: 1
  selector:
    matchLabels:
      app: citus-coordinator
  template:
    metadata:
      labels:
        app: citus-coordinator
    spec:
      containers:
        - name: citus-coordinator
          image: citusdata/citus:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: movies
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: movies
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: citus-worker
  namespace: kiii-namespace
spec:
  ports:
    - port: 5432
      name: postgres
  clusterIP: None
  selector:
    app: citus-worker
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: citus-worker
  namespace: kiii-namespace
spec:
  serviceName: "citus-worker"
  replicas: 3
  selector:
    matchLabels:
      app: citus-worker
  template:
    metadata:
      labels:
        app: citus-worker
    spec:
      containers:
        - name: citus-worker
          image: citusdata/citus:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: movies
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: movies
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
