k8s/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: kiii-namespace
spec:
  selector:
    app: postgres-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: kiii-service
  namespace: kiii-namespace
spec:
  type: NodePort
  selector:
    app: movies-project
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30081
