k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kiii-ingress
  namespace: kiii-namespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: movies.kiii.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kiii-service
                port:
                  number: 8080
